<resources>
    <string name="app_name">QRCode2025</string>



    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scanner_barcode">Scanner Barcode</string>
    <string name="history_qrcode">History QRCode</string>
    <string name="url_web">URL WEB</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="text">TEXT</string>
    <string name="sms">SMS</string>
    <string name="send_sms">Send SMS</string>
    <string name="wifi">WIFI</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="phone">Phone</string>
    <string name="add_contact">Add Contact</string>
    <string name="open_browser">Open browser</string>
    <string name="send_email">Send email</string>
    <string name="connect_wifi">Connect Wifi</string>
    <string name="copy_pass">Copy Pass</string>
    <string name="create_qr_code">Create QR CODE</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete_now">Do you want to delete now ?</string>
    <string name="create">Create</string>
    <string name="clipboard">ClipBoard</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="www">www.</string>
    <string name="com">.com</string>
    <string name="web">WEB</string>
    <string name="url">URL</string>
    <string name="wpa_wpa2">WPA/WPA2</string>
    <string name="wep">WEP</string>
    <string name="none">None</string>
    <string name="password">Password</string>
    <string name="wifi_name_ssid">Wifi Name(SSID)</string>
    <string name="type_security">Type Security</string>
    <string name="facebook">Facebook</string>
    <string name="enter_id_facebook">Enter ID Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="enter_id_video">Enter ID Video</string>
    <string name="channel_id">Channel ID</string>
    <string name="id_video">ID video</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="text_message">Text Message</string>
    <string name="please_enter_something">Please enter something</string>
    <string name="paypal">Paypal</string>
    <string name="link_me">Link Me</string>
    <string name="username_me">Username Me</string>
    <string name="id_facebook">ID Facebook</string>
    <string name="save">Save</string>
    <string name="enter_url">Enter Url</string>
    <string name="https">https://</string>
    <string name="login_name">Login Name</string>
    <string name="input_username_instagram">Input UserName Instagram</string>
    <string name="instagram">Instagram</string>
    <string name="loginname">LoginName</string>
    <string name="spotify">Spotify</string>
    <string name="name_artist">Name Artist</string>
    <string name="name_song">Name Song</string>
    <string name="name_network">Name Network</string>
    <string name="viber">Viber</string>
    <string name="input_your_number">Input your number</string>
    <string name="email">Email</string>
    <string name="input_your_email">Input your email</string>
    <string name="no_data">No Data</string>
    <string name="settings">Settings</string>
    <string name="all_settings">All Settings</string>
    <string name="help">Help</string>
    <string name="beep_sound">Beep sound</string>
    <string name="beeping_sound_when_scanning_successfully">Beeping sound when scanning successfully</string>
    <string name="automatically_copy_to_temporary_cache">Automatically copy to temporary cache</string>
    <string name="vibrate">Vibrate</string>
    <string name="search_engine">Search engine</string>
    <string name="language_options">Language options</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="feedback">Feedback</string>
    <string name="report_bugs_to_us">Report bugs to us</string>

    <string name="scanText">Scan</string>
    <string name="createText">Create</string>
    <string name="historyText">History</string>
    <string name="settingsText">Setting</string>




    <string name="language_arabic" translatable="false">عربي</string>
    <string name="language_german" translatable="false">Deutsch</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_spanish" translatable="false">Español</string>
    <string name="language_french" translatable="false">Français</string>
    <string name="language_italian" translatable="false">Italiano</string>
    <string name="language_japanese" translatable="false">日本語</string>
    <string name="language_korean" translatable="false">한국인</string>
    <string name="language_dutch" translatable="false">Nederlands</string>
    <string name="language_polish" translatable="false">Polski</string>
    <string name="language_portuguese" translatable="false">Português</string>
    <string name="language_russian" translatable="false">Русский</string>
    <string name="language_ukrainian" translatable="false">українська</string>
    <string name="language_chinese" translatable="false">中国人</string>
    <string name="language_hindi" translatable="false">हिंदी</string>
    <string name="language_vietnam" translatable="false">Tiếng Việt</string>
    <string name="language">Language</string>
    <string name="tell_us_the_problem_you_encountered">Tell us the problem you encountered</string>
    <string name="type">Type</string>



    <string name ="scanningText">Scanning not working</string>
    <string name ="tooManyAdsText">Too many ads</string>
    <string name ="needMoreText">Need more information after scanning</string>
    <string name ="othersText">Others</string>
    <string name="submit">Submit</string>


</resources>