<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/viewHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backImg"
            android:tint="@color/black"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            tools:ignore="UseAppTint"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"/>


        <LinearLayout
            android:id="@+id/tabCreate"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/check"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                />
            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/create"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/colorMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/lineGray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/gray_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeader" />

    <RelativeLayout
        android:id="@+id/viewCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineGray">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardIconQRType"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_2sdp"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgIconQr"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/sendsms" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/nameQrCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardIconQRType"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/sms"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/viewCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/phoneNumberText"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@null"
            android:inputType="phone"
            android:textSize="@dimen/_14ssp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/green" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/text_message"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/gray"/>

        <EditText
            android:id="@+id/edtMessage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_tab_group"
            android:gravity="top|start"
            android:padding="@dimen/_10sdp"
            android:hint="@string/please_enter_something"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>