<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/_5sdp"
        android:src="@drawable/back_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/viewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton">


        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:src="@drawable/blem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_bold"
            android:text="@string/tell_us_the_problem_you_encountered"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/type"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTop" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChooseType"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/textType"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/cardSubmit"
        android:layout_marginTop="@dimen/_30sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardBackgroundColor="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/rvChooseType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp">
        <RelativeLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/inter_bold"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>